@@ -1,5 +1,5 @@
 
-  netsed 1.3       (C) 2010-2012  Julien VdG <julien@silicone.homelinux.org>
+  netsed 1.4       (C) 2010-2012  Julien VdG <julien@silicone.homelinux.org>
                    (C) 2015          Alexey Shumkin <alex.crezoff@gmail.com>
   --------------------------------------------------------------------------
 
