@@ -1,5 +1,5 @@
 Name:		netsed
-Version:	1.3
+Version:	1.4
 Release:	1%{?dist}
 Summary:	Netsed, the network packet stream editor.
 
