@@ -1,3 +1,7 @@
+2015-12-05; netsed 1.4:
+  - new feature from Alexey Shumkin:
+    - Run detached and add -f/--foreground option
+
 2015-11-20; netsed 1.3:
   - new feature from Alexey Shumkin:
     - Deletion and addition rules.
